Update snakegame.java